--- a/templates/survey/survey.finished.html
+++ b/templates/survey/survey.finished.html
@@ -7,7 +7,7 @@
   	You succesfully completed the survey - thanks for participating!
   </p>
 
-<div class="fb-like" data-href="http://www.werklozennet.be/survey?surveyid=49296b58266ac48fd2b61ff4cfef67ea" data-send="true" data-width="450" data-show-faces="true"></div>
+<div class="fb-like" data-href="http://www.socialsurveys.woutersmet.com/survey?surveyid=49296b58266ac48fd2b61ff4cfef67ea" data-send="true" data-width="450" data-show-faces="true"></div>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
